--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar autocomplete="on" placeholder="Buscar" (ionChange)="sharedItem(buscarTexto.value)" (ionClear)="reloadItem()" #buscarTexto></ion-searchbar>
 
   <ng-container *ngIf="!estudiantes || estudiantes.length == 0">
     <div *ngFor="let n of [0,1,2]" padding>
@@ -22,7 +23,7 @@
 
   <ion-list>
     <ion-item-sliding *ngFor='let item of estudiantes'>
-      <ion-item lines='inset' button [routerLink]="['/estudiantes',item.id]">
+      <ion-item lines='inset' button [routerLink]="['/detalle-estudiante',item.id]">
         <ion-label>
           {{item.nombre}} {{item.apellido}}
           <p>{{item.codigo}}</p>
@@ -33,13 +34,16 @@
         <ion-item-option (click)="remove(item)" color='danger'>
           <ion-icon name="trash"></ion-icon>
         </ion-item-option>
+        <ion-item-option (click)="edit(item)" color='tertiary'>
+          <ion-icon name="create"></ion-icon>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button routerLink="/estudiantes" routerDirection="forward">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="person-add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
