Coreccion de errores  estudiante
Se corriegen los errore de refresco de las paginas de home y documentos, se cambia popover por ventana modal de documentos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,7 +23,7 @@
 
   <ion-list>
     <ion-item-sliding *ngFor='let item of estudiantes'>
-      <ion-item lines='inset' button [routerLink]="['/detalle-estudiante',item.id]">
+      <ion-item button [routerLink]="['/detalle-estudiante',item.id]">
         <ion-label>
           {{item.nombre}} {{item.apellido}}
           <p>{{item.codigo}}</p>
