--- a/src/app/pages/detalle-estudiante/detalle-estudiante.page.html
+++ b/src/app/pages/detalle-estudiante/detalle-estudiante.page.html
@@ -23,8 +23,21 @@
   </ion-card>
 
   <ion-card>
-    <ion-item href="#" class="activated" *ngFor="let documento of estudiante.documentos">
-      <ion-icon name="wifi" slot="start"></ion-icon>
+    <ion-card-header>
+      <ion-card-subtitle>Documentos entregados</ion-card-subtitle>
+    </ion-card-header>
+    <ion-item *ngFor="let documento of estudiante.documentos">
+        <ion-icon name="checkbox-outline" slot='start' color="success"></ion-icon>
+      <ion-label>{{documento.descripcion}}</ion-label>
+    </ion-item>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Documentos faltantes</ion-card-subtitle>
+    </ion-card-header>
+    <ion-item *ngFor="let documento of documentosEstudiante">
+      <ion-icon name="sad" slot="start" color="danger"></ion-icon>
       <ion-label>{{documento.descripcion}}</ion-label>
     </ion-item>
   </ion-card>
@@ -35,7 +48,7 @@
     </ion-fab-button>
 
     <ion-fab-list side="top">
-      <ion-fab-button color="success" (click)="openModal($event)">
+      <ion-fab-button color="success" (click)="openModal()">
         <ion-icon name="document"></ion-icon>
       </ion-fab-button>
       <ion-fab-button color="warning" (click)="edit()">
