--- a/src/app/pages/documentos/documentos.page.html
+++ b/src/app/pages/documentos/documentos.page.html
@@ -23,7 +23,7 @@
   
     <ion-list>
       <ion-item-sliding *ngFor='let item of documentos'>
-        <ion-item lines='inset' button [routerLink]="['/detalle-documento',item.id]">
+        <ion-item button [routerLink]="['/detalle-documento',item.id]">
           <ion-label>
             {{item.descripcion}}
             <p>{{item.codigo}}</p>
